# jmlr_2019

./: .gitmodules  README.md
nix-scripts/: flake.nix
project/: animal.ipynb  pyproject.toml  shrec_synthetic_all_freq.ipynb
project/.jupyter/: migrated
