[project]
name = "nix-vscode"
version = "0.1.0"
description = ""
authors = [
    {name = "Daisuke Sakurai",email = "d.sakurai0@gmail.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "torch (==1.8.1)",
    # "numpy (<2.0)", # 2.0 conflicts with torch 
    # "jupyterlab (>=4.4.2,<5.0.0)",
    # "notebook (>=7.4.2,<8.0.0)",
    # "ipykernel (>=6.29.5,<7.0.0)",
    # "plotly (>=6.1.1,<7.0.0)",
    # "kaleido (==0.2.1)", # 0.2.1+prev1 does not support x86_64
    # "torchvision (>=0.22.0,<0.23.0)",
    # "mlflow (>=2.22.0,<3.0.0)",
    # "pytorch-lightning (>=2.5.1.post0,<3.0.0)",
    "h5py (<3.9)",
    "torchph (>=0.1.1,<0.2.0)",
    "jupyterlab (<3.7)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "scikit-learn (==1.3.2)",
    "matplotlib (<3.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "torch_source_cuda126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[[tool.poetry.source]]
name = "torch_source_cuda111"
url = "https://download.pytorch.org/whl/cu111"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "torch_source_cuda111"}

